--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "docusaurus start --no-open",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "DEPLOYMENT_BRANCH='main' docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.6",
